# AIxSuture

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md
.claude/: settings.json
.claude/rules/common/: agents.md  code-review.md  language-agent-map.md
aixsuture/: .gitignore  README.md  basic_ops.py  dataset.py  models.py  preprocessing.py  pyproject.toml  test.py  test_args.py  train.py  train_opts.py  transforms.py  util.py
docker/: .env.example  README.md  compose.yml
docker/aixsuture/: Dockerfile
docker/sam3/: Dockerfile
docs/: 2026-04-17_sam3p1_vram_investigation.md
docs/2026-04-17_sam3p1_vram_investigation/: 01_problem.md  02_fix.md  03_scale.md  04_video.md  05_overlay.md  06_throughput.md  07_phases.md  README.md  remaining_tasks.md
docs/2026-04-20_aixsuture_integration/: README.md  data_capability_matrix.md  phase1_results.md  phase2_plan.md
tmp/: monitor.sh
tmp/aixsuture/probe_results/: smoke.csv  summary.csv
tmp/log/: .d1_mon_log  .d1_run_log  .e_mon_log  .e_run_log  latest.env
